# Case-Study-A1

./: CMakeLists.txt  Doxyfile  README.md  main.cc
env/: params.h
lib/: assert.h  datahandler.h  helpers.h  matrix.h  tsqr_assert.h
